--- a/bermudas.html
+++ b/bermudas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Versatil</title>
     <!-- link-bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,6 +15,7 @@
 <body>
     <div class="contenedor-principal">
         <header>
+            <!-- menú-desplegable -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-black">
                 <div class="container-fluid">
                     <img src="logo-blancoo.png" height="50px" width="50px" alt="versatil" class="logo-versatil">
@@ -96,7 +97,7 @@
                     <a href="#" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
-            
+
         </div>
     </div>
     <footer>
