--- a/buzos.html
+++ b/buzos.html
@@ -1,77 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <!-- link-bootstrap -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Versatil</title>
+    <!-- link-bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- link-css -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-        <div class="container-fluid">
-            <img src="logo-blancoo.png" height="50px" width="50px" alt="versatil" class="logo-versatil">
-            <a class="navbar-brand" href=".logo-solo.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="versatil.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Prendas
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="remeras.html">Remeras</a></li>
-                            <li><a class="dropdown-item" href="buzos.html">Buzos</a></li>
-                            <li><a class="dropdown-item" href="pantalones.html">Pantalones</a></li>
-                            <li><a class="dropdown-item" href="bermudas.html">Bermudas</a></li>
-                            <li><a class="dropdown-item" href="camisas.html">Camisas</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
+    <div class="contenedor-principal">
+        <header>
+            <!-- menú-desplegable -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+                <div class="container-fluid">
+                    <img src="logo-blancoo.png" height="50px" width="50px" alt="versatil" class="logo-versatil">
+                    <a class="navbar-brand" href=".logo-solo.png"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="versatil.html">Inicio</a>
                             </li>
-                            <li><a class="dropdown-item" href="#">Ver todo</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Prendas
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="remeras.html">Remeras</a></li>
+                                    <li><a class="dropdown-item" href="buzos.html">Buzos</a></li>
+                                    <li><a class="dropdown-item" href="pantalones.html">Pantalones</a></li>
+                                    <li><a class="dropdown-item" href="bermudas.html">Bermudas</a></li>
+                                    <li><a class="dropdown-item" href="camisas.html">Camisas</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="todo.html">Ver todo</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+
+
+            <h1 class="container" style="text-align: center;">VERSATIL</h1>
+
+        </header>
+        <!-- TARJETAS ROPA -->
+        <div class="contenedor-tarjetas">
+            <div class="card" style="width: 18rem;">
+                <img src="buzo-liso.jpeg" class="card-img-top" alt="Buzo">
+                <div class="card-body">
+                    <h5 class="card-title">Buzo Liso</h5>
+                    <p class="card-text">Buzo Liso. Marca "DUET". Talles: S-XXL.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="buzo-airport.jpeg" class="card-img-top" alt="Buzo">
+                <div class="card-body">
+                    <h5 class="card-title">Buzo "AIRPORT"</h5>
+                    <p class="card-text">Buzo "AIRPORT". Marca "DUET". Talles: S-XXL.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="buzo-aware.jpeg" class="card-img-top" alt="Buzo">
+                <div class="card-body">
+                    <h5 class="card-title">Buzo "AWARE"</h5>
+                    <p class="card-text">Buzo "AWARE". Marca "DUET". Talles: S-XXL.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="buzo-paradise.jpeg" class="card-img-top" alt="Buzo">
+                <div class="card-body">
+                    <h5 class="card-title">BUZO "PARADISE"</h5>
+                    <p class="card-text">Buzo "PARADISE". Marca "DUET". Talles: S-XXL.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
             </div>
         </div>
-    </nav>
+    </div>
+    <footer>
+        ©Versatil.Tuc
+    </footer>
 
-
-    <h1 class="container" style="text-align: center;">VERSATIL</h1>
-
-</header>
-    <div class="contenedor-tarjetas">
-        <div class="card" style="width: 18rem;">
-            <img src="remera-over.jpeg" class="card-img-top" alt="Remera over">
-            <div class="card-body">
-                <h5 class="card-title">Remera over "NEVER STOP RIDE"</h5>
-                <p class="card-text">Remera over "NEVER STOP RIDE". Marca "DICKSON". Talles del S al XXL</p>
-                <a href="#" class="btn btn-primary">COMPRAR</a>
-            </div>
-            <footer>
-                ©Versatil.Tuc
-              </footer>
-                
     <!-- SCRIPT BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
