--- a/versatil.html
+++ b/versatil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Versatil</title>
     <!-- link-bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,138 +13,143 @@
 </head>
 
 <body>
-    <header>
-        <!-- menú-desplegable -->
-        <!-- ¿Como se le cambia el color a la navbar? -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <div class="container-fluid">
-                <img src="logo-blancoo.png" height="50px" width="50px" alt="versatil" class="logo-versatil">
-                <a class="navbar-brand" href=".logo-solo.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="versatil.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Prendas
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="remeras.html">Remeras</a></li>
-                                <li><a class="dropdown-item" href="buzos.html">Buzos</a></li>
-                                <li><a class="dropdown-item" href="pantalones.html">Pantalones</a></li>
-                                <li><a class="dropdown-item" href="bermudas.html">Bermudas</a></li>
-                                <li><a class="dropdown-item" href="camisas.html">Camisas</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Ver todo</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
+    <div class="contenedor-principal">
+
+
+        <header>
+            <!-- menú-desplegable -->
+            
+            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+                <div class="container-fluid">
+                    <img src="logo-blancoo.png" height="50px" width="50px" alt="versatil" class="logo-versatil">
+                    <a class="navbar-brand" href=".logo-solo.png"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="versatil.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Prendas
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="remeras.html">Remeras</a></li>
+                                    <li><a class="dropdown-item" href="buzos.html">Buzos</a></li>
+                                    <li><a class="dropdown-item" href="pantalones.html">Pantalones</a></li>
+                                    <li><a class="dropdown-item" href="bermudas.html">Bermudas</a></li>
+                                    <li><a class="dropdown-item" href="camisas.html">Camisas</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="todo.html">Ver todo</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
 
-        <h1 class="container" style="text-align: center;">VERSATIL</h1>
+            <h1 class="container" style="text-align: center;">VERSATIL</h1>
 
-    </header>
-    <div class="q-somos">
-        <h2>¿Quienes somos?</h2>
-        <p>Somos un emprendiento de ropa nacido en Tucumán, que surgió una noche entre amigos viendo que no había un lugar para comprar ropa fachera y barata que sea de buena de calidad. Así, nació VERSATIL.TUC</p>
-    </div>
+        </header>
+        <div class="q-somos">
+            <h2>¿Quienes somos?</h2>
+            <p>Somos un emprendiento de ropa nacido en Tucumán, que surgió una noche entre amigos viendo que no había un
+                lugar para comprar ropa fachera y barata que sea de buena de calidad. Así, nació VERSATIL.TUC</p>
+        </div>
         <!-- Carrousel-ropa -->
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="bermuda-over.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="camisa.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="remera-over.jpeg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="bermuda-over.jpeg" class="d-block w-100" alt="...">
+        <!-- tarjetas ropa -->
+        <div class="contenedor-tarjetas">
+            <div class="card" style="width: 18rem;">
+                <img src="bermuda-over.jpeg" class="card-img-top" alt="Bermuda">
+                <div class="card-body">
+                    <h5 class="card-title">Bermuda over</h5>
+                    <p class="card-text">Bermuda over. Material: Jean. Marca: "Mis Raices". Talles: 38-48.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="camisa.jpeg" class="d-block w-100" alt="...">
+            <div class="card" style="width: 18rem;">
+                <img src="camisa.jpeg" class="card-img-top" alt="Camisa Lino">
+                <div class="card-body">
+                    <h5 class="card-title">Camisa mangas cortas de lino</h5>
+                    <p class="card-text">Camisa de lino de alta calidad. Marca "DUET". Talles del S al XXL</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="remera-over.jpeg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <!-- tarjetas ropa -->
-    <div class="contenedor-tarjetas">
-        <div class="card" style="width: 18rem;">
-            <img src="bermuda-over.jpeg" class="card-img-top" alt="Bermuda">
-            <div class="card-body">
-                <h5 class="card-title">Bermuda over de jean</h5>
-                <p class="card-text">Bermuda over de jean de alta calidad. Marca "Mis Raices". Talles del 38 al 48</p>
-                <a href="#" class="btn btn-primary">COMPRAR</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="camisa.jpeg" class="card-img-top" alt="Camisa Lino">
-            <div class="card-body">
-                <h5 class="card-title">Camisa mangas cortas de lino</h5>
-                <p class="card-text">Camisa de lino de alta calidad. Marca "DUET". Talles del S al XXL</p>
-                <a href="#" class="btn btn-primary">COMPRAR</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="remera-over.jpeg" class="card-img-top" alt="Remera over">
-            <div class="card-body">
-                <h5 class="card-title">Remera over "NEVER STOP RIDE"</h5>
-                <p class="card-text">Remera over "NEVER STOP RIDE". Marca "DICKSON". Talles del S al XXL</p>
-                <a href="#" class="btn btn-primary">COMPRAR</a>
+            <div class="card" style="width: 18rem;">
+                <img src="remera-over.jpeg" class="card-img-top" alt="Remera over">
+                <div class="card-body">
+                    <h5 class="card-title">Remera over "NEVER STOP RIDE"</h5>
+                    <p class="card-text">Remera over "NEVER STOP RIDE". Marca "DICKSON". Talles del S al XXL</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                </div>
             </div>
         </div>
     </div>
     <!-- ubicación versatil -->
     <footer>
-    <div class="ubicacion"> 
-        <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.378586900378!2d-65.21351812464027!3d-26.82790838966569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c147bd2aced%3A0xeaf759aca1f18a12!2sPcia%20de%20Salta%20126%2C%20T4000%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n!5e0!3m2!1ses-419!2sar!4v1740149226021!5m2!1ses-419!2sar"
-        width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div class="detalles-ubi">
-          <h3>¿Dónde nos encontramos?</h3> 
-          <p>Estamos ubicados en Salta 126, 4to E, esquina calle San Martín.</p> 
-          <p>Realizamos envíos a San Miguel de Tucumán y alrededores por medio de Uber flash moto.</p>
-         </div>
-         <!-- SCRIPT BOOTSTRAP -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    </div>
-    
-      ©Versatil.Tuc
+        <div class="ubicacion">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.378586900378!2d-65.21351812464027!3d-26.82790838966569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c147bd2aced%3A0xeaf759aca1f18a12!2sPcia%20de%20Salta%20126%2C%20T4000%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n!5e0!3m2!1ses-419!2sar!4v1740149226021!5m2!1ses-419!2sar"
+                width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="detalles-ubi">
+                <h3>¿Dónde nos encontramos?</h3>
+                <p>Estamos ubicados en Salta 126, 4to E, esquina calle San Martín.</p>
+                <p>Realizamos envíos a San Miguel de Tucumán y alrededores por medio de Uber flash moto.</p>
+            </div>
+            <!-- SCRIPT BOOTSTRAP -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+        </div>
+
+        ©Versatil.Tuc
     </footer>
 </body>
 
