--- a/bermudas.html
+++ b/bermudas.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="#">Contacto</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                <a class="nav-link dropdown-toggle" href="contacto.html" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     Prendas
                                 </a>
